Добавил шестую часть дз + тесты + исправил код под критерии оценивания